[package]
name = "oxido"
version = "2.5.0"
edition = "2021"

[lib]
name = "oxidolib"
path = "src/lib.rs"

[[bin]]
name = "oxidobin"
path = "src/bin.rs"

[profile.release]
strip = true
opt-level = "z"

[profile.dev]
opt-level = 3
debug = true

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
codespan-reporting = "0.11.1"