[package]
name = "oxido"
version = "2.6.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"

[profile.dev]
opt-level = 3
debug = true

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
codespan-reporting = "0.11.1"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
rustyline = "11.0.0"
